// Copyright 2018 The Fuchsia Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

#ifndef COBALT_SRC_LOGGER_EVENT_AGGREGATOR_H_
#define COBALT_SRC_LOGGER_EVENT_AGGREGATOR_H_

#include "src/local_aggregation/event_aggregator.h"

namespace cobalt::logger {

using local_aggregation::EventAggregator;

}  // namespace cobalt::logger

#endif  // COBALT_SRC_LOGGER_EVENT_AGGREGATOR_H_
